--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -407,4 +407,8 @@
          or a single SIM device can have 1 phones/logical modems, but 2 physical slots (one eSIM
          and one pSIM) -->
     <integer name="config_num_physical_slots">2</integer>
+    
+    <!-- Device supports SmartPixels -->
+    <bool name="config_enableSmartPixels">true</bool>
+    
 </resources>
